--- a/Airbnb_clone_coding/templates/rooms/home.html
+++ b/Airbnb_clone_coding/templates/rooms/home.html
@@ -6,12 +6,22 @@ Home
 {%endblock page_name%}
 
 {%block content%}
-{% for room in rooms %}
+{% for room in rooms.object_list %}
     <h1>{{room.name}} / ${{room.price}}</h1>
 {% endfor %}
-   <h5>Page {{page}} of {{page_count}}</h5>
+   <h5>
+    {%if rooms.has_previous %}
+     <a href="?page={{rooms.number|add:-1}}">Previous </a>
+    {%endif%}
+   Page {{rooms.number}} of {{rooms.paginator.num_pages}}
+    {%if rooms.has_next %}
+     <a href="?page={{rooms.number|add:+1}}">Next </a>
+    {%endif%}
 
-   {%for page in page_range%}
-    <a href="?page={{page}}">{{page}} </a>
-   {%endfor%}
+    {% comment %} {%for page in rooms.paginator.page_range%}
+        {{page}}
+    {%endfor%}{% endcomment %}
+   </h5>
+
+  
 {%endblock content%}
