--- a/Airbnb_clone_coding/templates/rooms/room_list.html
+++ b/Airbnb_clone_coding/templates/rooms/room_list.html
@@ -7,20 +7,19 @@ Home
 
 {%block content%}
 
-{% for room in page.object_list %}
-
+{% for room in object_list %}
     <h1>{{room.name}} / ${{room.price}}</h1>
 {% endfor %}
 
    <h5>
-    {%if page.has_previous %}
-     <a href="?page={{page.preious_page_number}}">Previous </a>
+    {%if page_obj.has_previous %}
+     <a href="?page={{page_obj.previous_page_number}}">Previous </a>
     {%endif%}
 
-   Page {{page.number}} of {{page.paginator.num_pages}}
+   Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}
 
-    {%if page.has_next %}
-     <a href="?page={{page.next_page_number}}">Next </a>
+    {%if page_obj.has_next %}
+     <a href="?page={{page_obj.next_page_number}}">Next </a>
     {%endif%}
 
     {% comment %} {%for page in rooms.paginator.page_range%}
