--- a/Airbnb_clone_coding/templates/base.html
+++ b/Airbnb_clone_coding/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{%block page_name %}
+    <title>{%block page_title %}
         {%endblock%} |Nbnb</title>
 </head>
 <body>
