--- a/Airbnb_clone_coding/templates/base.html
+++ b/Airbnb_clone_coding/templates/base.html
@@ -7,8 +7,16 @@
         {%endblock%} |Nbnb</title>
 </head>
 <body>
+  <header>
+    {%include "partials/nav.html" %}
+    {%block search-bar%}
+         <form method="get" action="{%url "rooms:search"%}">
+            <input  name="city" placeholder="Search By City">
+        </form>
+    {%endblock search-bar%}
   
-{%include "partials/header.html" %}
+  </header>
+
 {%block content %}{%endblock%}
 {%include "partials/footer.html" %}
 </body>
