--- a/Airbnb_clone_coding/templates/rooms/search.html
+++ b/Airbnb_clone_coding/templates/rooms/search.html
@@ -103,6 +103,12 @@
         </div>
         <button>Search</button>
     </form>
+
+    <h3>Results<h3>
+
+    {%for room in rooms%}
+        <h3>{{room.name}} </h3>
+    {%endfor%}
     
     <h4>Searching by {{city}} </h4>
 {%endblock content%}
